appState service addded

--- a/avatar-editor/app/index.html
+++ b/avatar-editor/app/index.html
@@ -49,6 +49,7 @@
         <script src="scripts/controllers/editor.js"></script>
         <script src="scripts/controllers/question.js"></script>
         <script src="scripts/controllers/share.js"></script>
+        <script src="scripts/services/appstate.js"></script>
         <!-- endbuild -->
 
         <script src="scripts/services/config.js"></script>
