coding the avatar editor

--- a/avatar-editor/app/index.html
+++ b/avatar-editor/app/index.html
@@ -50,6 +50,8 @@
         <script src="scripts/controllers/question.js"></script>
         <script src="scripts/controllers/share.js"></script>
         <script src="scripts/services/appstate.js"></script>
+        <script src="scripts/directives/dressroom.js"></script>
+        <script src="scripts/directives/avatarsexselector.js"></script>
         <!-- endbuild -->
 
         <script src="scripts/services/config.js"></script>
