angular-translate added

--- a/avatar-editor/app/index.html
+++ b/avatar-editor/app/index.html
@@ -34,6 +34,7 @@
         <script src="bower_components/scrollmagic/scrollmagic/uncompressed/ScrollMagic.js"></script>
         <script src="bower_components/gsap/src/uncompressed/TweenMax.js"></script>
         <script src="bower_components/angular-socialshare/dist/angular-socialshare.min.js"></script>
+        <script src="bower_components/angular-translate/angular-translate.js"></script>
         <!-- endbower -->
         <!-- endbuild -->
 
