--- a/avatar-editor/app/index.html
+++ b/avatar-editor/app/index.html
@@ -53,6 +53,7 @@
         <script src="scripts/services/appstate.js"></script>
         <script src="scripts/directives/dressroom.js"></script>
         <script src="scripts/directives/avatarsexselector.js"></script>
+        <script src="scripts/directives/avatarquestion.js"></script>
         <!-- endbuild -->
 
         <script src="scripts/services/config.js"></script>
