--- a/avatar-editor/app/index.html
+++ b/avatar-editor/app/index.html
@@ -54,6 +54,7 @@
         <script src="scripts/directives/dressroom.js"></script>
         <script src="scripts/directives/avatarsexselector.js"></script>
         <script src="scripts/directives/avatarquestion.js"></script>
+        <script src="scripts/services/api.js"></script>
         <!-- endbuild -->
 
         <script src="scripts/services/config.js"></script>
