--- a/avatar-editor/app/index.html
+++ b/avatar-editor/app/index.html
@@ -55,6 +55,7 @@
         <script src="scripts/directives/avatarsexselector.js"></script>
         <script src="scripts/directives/avatarquestion.js"></script>
         <script src="scripts/services/api.js"></script>
+        <script src="scripts/directives/shareavatar.js"></script>
         <!-- endbuild -->
 
         <script src="scripts/services/config.js"></script>
