share almost done

--- a/avatar-editor/app/index.html
+++ b/avatar-editor/app/index.html
@@ -56,6 +56,8 @@
         <script src="scripts/directives/avatarquestion.js"></script>
         <script src="scripts/services/api.js"></script>
         <script src="scripts/directives/shareavatar.js"></script>
+        <script src="scripts/services/randomgenerator.js"></script>
+        <script src="scripts/directives/svgtojpeg.js"></script>
         <!-- endbuild -->
 
         <script src="scripts/services/config.js"></script>
