--- a/avatar-editor/app/index.html
+++ b/avatar-editor/app/index.html
@@ -33,12 +33,12 @@
         <script src="bower_components/angular-touch/angular-touch.js"></script>
         <script src="bower_components/scrollmagic/scrollmagic/uncompressed/ScrollMagic.js"></script>
         <script src="bower_components/gsap/src/uncompressed/TweenMax.js"></script>
-        <script src="bower_components/angular-socialshare/dist/angular-socialshare.min.js"></script>
         <script src="bower_components/angular-translate/angular-translate.js"></script>
+        <script src="bower_components/angular-socialshare/dist/angular-socialshare.min.js"></script>
         <!-- endbower -->
         <!-- endbuild -->
 
-        <script src="bower_components/gsap/src/minified/jquery.gsap.min.js"></script>
+
 
         <!-- build:js({.tmp,app}) scripts/scripts.js -->
         <script src="scripts/app.js"></script>
@@ -58,9 +58,12 @@
         <script src="scripts/directives/shareavatar.js"></script>
         <script src="scripts/services/randomgenerator.js"></script>
         <script src="scripts/directives/svgtojpeg.js"></script>
-        <!-- endbuild -->
 
         <script src="scripts/services/config.js"></script>
+        <script src="scripts/services/transfromrequestasformpost.js"></script>
+        <!-- endbuild -->
+
+
 
     </body>
 </html>
