--- a/avatar-editor/app/index.html
+++ b/avatar-editor/app/index.html
@@ -61,6 +61,9 @@
 
         <script src="scripts/services/config.js"></script>
         <script src="scripts/services/transfromrequestasformpost.js"></script>
+        <script src="scripts/controllers/landing.js"></script>
+        <script src="scripts/directives/landinglanguage.js"></script>
+        <script src="scripts/directives/landingdistrict.js"></script>
         <!-- endbuild -->
 
 
