templates service redone for inline strings

--- a/avatar-editor/app/index.html
+++ b/avatar-editor/app/index.html
@@ -64,6 +64,7 @@
         <script src="scripts/controllers/landing.js"></script>
         <script src="scripts/directives/landinglanguage.js"></script>
         <script src="scripts/directives/landingdistrict.js"></script>
+        <script src="scripts/services/templates.js"></script>
         <!-- endbuild -->
 
 
