--- a/avatar-editor/app/index.html
+++ b/avatar-editor/app/index.html
@@ -67,6 +67,7 @@
         <script src="scripts/services/templates.js"></script>
 
         
+        <script src="scripts/directives/stats.js"></script>
         <!-- endbuild -->
 
 
