--- a/avatar-editor/app/index.html
+++ b/avatar-editor/app/index.html
@@ -8,6 +8,7 @@
         <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
         <!-- build:css(.) styles/vendor.css -->
         <!-- bower:css -->
+        <link rel="stylesheet" href="bower_components/pivottable/dist/pivot.css" />
         <!-- endbower -->
         <!-- endbuild -->
         <!-- build:css(.tmp) styles/main.css -->
@@ -35,6 +36,7 @@
         <script src="bower_components/gsap/src/uncompressed/TweenMax.js"></script>
         <script src="bower_components/angular-translate/angular-translate.js"></script>
         <script src="bower_components/angular-socialshare/dist/angular-socialshare.min.js"></script>
+        <script src="bower_components/pivottable/dist/pivot.js"></script>
         <!-- endbower -->
         <!-- endbuild -->
 
